--- a/pset/pset 00 - Intro and Software Installation/pset00-intro-and-software-installation.Rmd
+++ b/pset/pset 00 - Intro and Software Installation/pset00-intro-and-software-installation.Rmd
@@ -117,9 +117,9 @@ a = g +
 
 #a  ## check that the animation works
 
-## save the animation
-# anim_save(a, 
-#           filename = 'img/test animation.gif')
+# save the animation
+anim_save(a,
+          filename = 'img/test animation.gif')
 
 ```
 
