--- a/pset/pset 00 - Intro and Software Installation/pset00-Github-pull-request-Quan-Le.Rmd
+++ b/pset/pset 00 - Intro and Software Installation/pset00-Github-pull-request-Quan-Le.Rmd
@@ -27,7 +27,7 @@ library(knitr)
 
 After you submit the quiz, take a screenshot of the time stamp and Question 1. It should look something like this. 
 
-![](img/Screenshot 2024-01-17 at 9.21.01 AM.png)
+![](img/_ss_quiz.png)
 
 Edit the above file name and path to show your screenshot and ensure that it appears when you knit your document. 
 
@@ -128,7 +128,7 @@ There should be a static plot and an animated plot above.
 If the `anim_save` worked properly there should be a new `test.gif`
 in the `img` folder that has your name. Take a screen shot of your animated gif when the points are near the upper right and show the screenshot here: 
 
-![](img/Screenshot 2024-01-17 at 10.06.27 AM.png)
+![](img/_ss_gif.png)
 
 
 If all of that works, `gganimate` is good to go!  If that doesn't work, see the tips at https://bmacgtpm.github.io/notes/software-installation.html.
@@ -149,7 +149,7 @@ See https://bmacgtpm.github.io/notes/software-installation.html.
 Take a screenshot showing Github Desktop (or different software, or the command line) and show it here. 
 
 
-![](img/Screenshot 2024-01-17 at 10.09.47 AM.png)
+![](img/_ss_github.png)
 
 If you have experience with Git/Github, and prefer to use different software or the command line, that's fine, but we may not be able to help if you have a problem.
 
@@ -161,7 +161,7 @@ Clone the repo, create a new branch and name the branch `Firstname Lastname` you
 
 See https://bmacgtpm.github.io/notes/github-copilot-in-rstudio.html.  
 
-![](img/Screenshot 2024-01-22 at 8.23.44 PM.png)
+![](img/_ss_copilot.png)
 
 If you use Github Copilot elsewhere, take a screenshot of whatever software you use.
 
