--- a/pset/pset 00 - Intro and Software Installation/pset00-Github-pull-request-Firstname-Lastname.Rmd
+++ b/pset/pset 00 - Intro and Software Installation/pset00-Github-pull-request-Firstname-Lastname.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "HW 0, Question 9"
-author: "Owen Tucker-Smith"
+author: "Owen TuckerSmith"
 date: 'Jan 15, 2024'
 output: html_document
 ---
