--- a/pset/pset 00 - Intro and Software Installation/pset00-intro-and-software-installation.Rmd
+++ b/pset/pset 00 - Intro and Software Installation/pset00-intro-and-software-installation.Rmd
@@ -148,7 +148,7 @@ See https://bmacgtpm.github.io/notes/software-installation.html.
 Take a screenshot showing Github Desktop (or different software, or the command line) and show it here. 
 
 
-![](img/snip of GitHub Desktop.png)
+![](img/githubdesktop.png)
 
 If you have experience with Git/Github, and prefer to use different software or the command line, that's fine, but we may not be able to help if you have a problem.
 
