--- a/pset/pset 00 - Intro and Software Installation/pset00-intro-and-software-installation.Rmd
+++ b/pset/pset 00 - Intro and Software Installation/pset00-intro-and-software-installation.Rmd
@@ -26,7 +26,7 @@ library(knitr)
 
 After you submit the quiz, take a screenshot of the time stamp and Question 1. It should look something like this. 
 
-![]()
+![](img/Course_survey.png)
 
 Edit the above file name and path to show your screenshot and ensure that it appears when you knit your document. 
 
@@ -142,7 +142,7 @@ Once you have created the animation, comment out the code that creates the anima
 
 See https://bmacgtpm.github.io/notes/software-installation.html. 
 
-I have bookmarked the appropriate websites!
+I have bookmarked the appropriate websites!!!
 
 ## Part 2: Github
 
