--- a/notes/Week1-Day2-Intro-to-Viz-and-Best-Practices.Rmd
+++ b/notes/Week1-Day2-Intro-to-Viz-and-Best-Practices.Rmd
@@ -4,6 +4,8 @@ author: "Brian Macdonald"
 output: ioslides_presentation
 ---
 
+HELOO
+
 ```{r setup, include=FALSE}
 library(tidyverse)
 library(plotly)
