--- a/pset/pset 00 - Intro and Software Installation/pset00-intro-and-software-installation.Rmd
+++ b/pset/pset 00 - Intro and Software Installation/pset00-intro-and-software-installation.Rmd
@@ -26,7 +26,7 @@ library(knitr)
 
 After you submit the quiz, take a screenshot of the time stamp and Question 1. It should look something like this. 
 
-![](img/snip of Course Survey.png)
+![](img/use_me.png)
 
 Edit the above file name and path to show your screenshot and ensure that it appears when you knit your document. 
 
