--- a/pset/pset 00 - Intro and Software Installation/pset00-intro-and-software-installation.Rmd
+++ b/pset/pset 00 - Intro and Software Installation/pset00-intro-and-software-installation.Rmd
@@ -133,7 +133,7 @@ There should be a static plot and an animated plot above.
 If the `anim_save` worked properly there should be a new `test.gif`
 in the `img` folder that has your name. Take a screen shot of your animated gif when the points are near the upper right and show the screenshot here: 
 
-![](img/Test animation.png)
+![](img/Animation_test.png)
 
 
 If all of that works, `gganimate` is good to go!  If that doesn't work, see the tips at https://bmacgtpm.github.io/notes/software-installation.html.
@@ -155,7 +155,7 @@ I have bookmarked the appropriate websites!!!
 Take a screenshot showing Github Desktop (or different software, or the command line) and show it here. 
 
 
-![](img/Github_desktop.png)
+![](img/Github_desk.png)
 
 If you have experience with Git/Github, and prefer to use different software or the command line, that's fine, but we may not be able to help if you have a problem.
 
@@ -171,7 +171,7 @@ If you find yourself getting too many GitHub notifications, you can go to https:
 
 See https://bmacgtpm.github.io/notes/github-copilot-in-rstudio.html.  
 
-![](img/snip of GitHub Copilot.png)
+![](img/Github_copilot.png)
 
 If you use Github Copilot elsewhere, take a screenshot of whatever software you use.
 
