--- a/pset/pset 00 - Intro and Software Installation/pset00-intro-and-software-installation.Rmd
+++ b/pset/pset 00 - Intro and Software Installation/pset00-intro-and-software-installation.Rmd
@@ -112,19 +112,19 @@ g = ggplot(iris,
 g
 
 
-a = g + 
-  transition_states(Species,
-                    transition_length = 2,
-                    state_length = 1)
+# a = g + 
+#  transition_states(Species,
+#                    transition_length = 2,
+#                    state_length = 1)
 
-a  
+# a  
 
 
 ## check that the animation works
 
 ## save the animation
-anim_save(a,
-          filename = 'img/test animation.gif')
+# anim_save(a,
+#          filename = 'img/test animation.gif')
 #
 
 ```
