--- a/pset/pset 00 - Intro and Software Installation/pset00-intro-and-software-installation.Rmd
+++ b/pset/pset 00 - Intro and Software Installation/pset00-intro-and-software-installation.Rmd
@@ -1,5 +1,6 @@
 ---
 title: 'S&DS 361 Homework 0: Software Prep'
+author: "Andrea Wang"
 date: "Due Tue Jan 23, 2024"
 output:
   pdf_document: default
